css/style.css
/* universal styles */

:root {
    --primary-color: #818181;
    --secondary-color: #d8d8d8;
}

.dark-theme {
    --primary-color: #ffffff;
    --secondary-color: #353535;
}

html {
    font-family: 'Assistant', sans-serif, serif;
    box-sizing: border-box;
    margin: 0;
    text-align: justify;
    padding: 0;
    width: 100%;
}

body {
    background-color: var(--secondary-color);
}

.container {
    position: relative;
    margin: 2em 2em;
    /* outline: 2px solid red; */
}

hr {
    border-color: #6F0B0A;
}

/* header styles */

header {
    position: relative;
    top: 50px;
    display: inline-flex;
    gap: 4rem;
    width: 100%;
    margin-bottom: 1rem;
}

nav {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    background-color: var(--secondary-color);
    opacity: 0.7;
    z-index: 10;
    /* outline: 2px solid red; */
}

nav ul {
    list-style: none;
    text-align: center;
}

nav a {
    display: inline-block;
    text-decoration: none;
    margin: 0.1rem;
    letter-spacing: 0.3rem;
    font-weight: bolder;
    color: var(--primary-color);
    background-color: var(--secondary-color);
    padding: 0.5% 5% 0.5% 5%;
}

a:hover {
    color: var(--primary-color);
}

a:active {
    color: antiquewhite;
    background-color:cadetblue;
}

#moon-icon {
    float: right;
    margin: 0.5rem 6rem;
    width: 30px;
    cursor: pointer;
    background-color: var(--primary-color);
}

/* main styles start */

/* about me styles */

#introduction {
    display: flex;
    position: relative;
    align-items: center;
    top: 5em;
    margin-bottom: 5.5rem;
    padding-left: 2rem;
    /* outline: 2px solid red; */
}

#introduction img {
    position: relative;
    display: inline-flex;
    max-width: 23%;
    height: auto;
    border-radius: 50rem;
    box-shadow: 0px 0px 14px 11px #8000006e;
}

#introduction h1 {
    position: relative;
    font-size: 2rem;
    padding: 0 2rem;
    /* outline: 2px solid red; */
}

#section-item {
    position: relative;
    margin: 0 0.5rem;
    /* outline: 2px solid red; */
}

/* my projects styles */

#projects {
    display: flex;
}

#projects .item {
    margin: 0 1rem 0 0;
    padding: 0.3rem 0;
}

/* tech skills styles */

.skill--items {
    display: flex;
    justify-content: space-evenly;
    padding-bottom: 1rem;
}

.skill--items i {
    font-size: 5rem;
    color: #d38585;
}

/* contact me styles */

.contact--items {
    display: flex;
    justify-content: space-evenly;
    padding-bottom: 1rem;
}

.contact--items i {
    font-size: 4rem;
    color: #d38585;
}

.contact--items i:hover {
    color: rgb(214, 181, 181);
}

/* main styles end */

/* media queries */

/* mobile queries */
@media only screen and (min-width: 200px) and  (max-width: 480px) {

}

/* tablet portrait queries */
@media only screen and (min-width: 481px) and  (max-width: 768px) {

}

/* tablet landscape queries */
@media only screen and (min-width: 769px) and  (max-width: 1024px) {

}

/* laptop queries */
@media only screen and (min-width: 1025px) and  (max-width: 1600px) {

}

/* desktop queries */
@media only screen and (min-width: 1601px) {

}

